--- a/KGERP/Views/ChequeRegister/Index.cshtml
+++ b/KGERP/Views/ChequeRegister/Index.cshtml
@@ -1,1 +1,181 @@
-﻿cheque register
+﻿@model KGERP.Service.ServiceModel.ChequeRegisterModel
+@using KGERP.Utility;
+
+@{
+    ViewData["Title"] = "Cheque Register";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
+    int sl = 0;
+}
+
+<style type="text/css">
+    input, select, textarea {
+        max-width: 100%;
+    }
+</style>
+
+<section class="content-header">
+    <h1>
+        <span>
+            Cheque Register
+        </span>
+    </h1>
+    <ol class="breadcrumb">
+        <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
+        <li class="active">
+            <span>
+                Cheque Register
+            </span>
+        </li>
+    </ol>
+</section>
+
+<section class="content">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="box">
+                <div class="box-danger">
+                    <div class="box-body">
+                        @using (Html.BeginForm("ChequeRegisterSearch", "ChequeRegister", FormMethod.Post, new { id = "ChequeRegisterFormId", @class = "formValidator" }))
+                        {
+                            @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyId" })
+
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        @Html.Label("Register For:", htmlAttributes: new { @class = "control-label" })
+                                        <br />
+                                        @Html.DropDownListFor(model => model.RegisterFor, Model.RegisterForList as SelectList, "==Register For==", new { id = "ddlregissterFor", @class = "form-control ddlReset searchingDropdown", style = "width:100%", required = "required" })
+                                        @Html.ValidationMessageFor(model => model.RegisterFor, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="message-text" class="form-label">From Date<sup class="text-danger" title="Required">*</sup></label>
+                                        <br />
+                                        <input name="StrFromDate" asp-for="StrFromDate" type="datetime" value="@DateTime.Now.ToString("dd/MM/yyyy")" required="required" class="datepicker w-100 dateCustom" placeholder="From Date" autocomplete="off" id="txtFromDate">
+                                        @Html.ValidationMessageFor(model => model.StrFromDate, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="message-text" class="form-label">To Date<sup class="text-danger" title="Required">*</sup></label>
+                                        <br />
+                                        <input name="StrToDate" asp-for="StrToDate" type="datetime" value="@DateTime.Now.ToString("dd/MM/yyyy")" required="required" class="datepicker w-100 dateCustom" placeholder="To Date" autocomplete="off" id="txtToDate">
+                                        @Html.ValidationMessageFor(model => model.StrToDate, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3" style="padding: 0px 2px 0px 8px;">
+                                    <div class="form-group">
+                                        <label>&nbsp;</label>
+                                        <button type="submit" id="btnSave" class="btn btn-primary btn-block">Show</button>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+
+                        <hr />
+
+                        <div class="table-responsive">
+                            <table id="KgErpDataTable" class="table table-striped table-responsive table-dark">
+                                <thead>
+
+                                    <tr>
+                                        <th>SL</th>
+                                        <th>Cheque No</th>
+                                        <th>Amount</th>
+                                        <th>PayTo</th>
+                                        <th>Issue Date</th>
+                                        <th>Cheque Date</th>
+                                        <th>Clearing Date</th>
+                                        <th>Project Name</th>
+                                        <th>Party/Supplier</th>
+                                        <th>Requisition No</th>
+                                        <th>Signed?</th>
+                                        <th>Print</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model.chequeRegisterList)
+                                    {
+                                        <tr>
+                                            <th>@(++sl)</th>
+                                            <td>@item.ChequeNo</td>
+                                            <td>@item.Amount</td>
+                                            <td>@item.PayTo</td>
+                                            <td>@item.IssueDate.ToString("dd-MM-yyyy")</td>
+                                            <td>@item.ChequeDate.ToString("dd-MM-yyyy")</td>
+                                            <td>@item.ClearingDate.ToString("dd-MM-yyyy")</td>
+                                            <td>@item.ProjectName</td>
+                                            <td>[@item.SupplierCode] - @item.SupplierName</td>
+                                            <td>
+                                                <a href="~/BillRequisition/BillRequisitionMasterCommonSlave?companyId=@item.CompanyFK&billRequisitionMasterId=@item.RequisitionId" class="link-primary text-primary" title="See Requisition Detail">@item.RequisitionNo</a>
+                                            </td>
+                                            <td>
+                                                @if (item.IsSigned == false)
+                                                {
+                                                    <span class="btn btn-xs btn-warning text-center" title="Click to signing" style="display: block; padding-left: 7px; padding-right: 7px;" id="hideSigned" onclick="ChequeSign(@item.ChequeRegisterId)">
+                                                        Unsigned
+                                                    </span>
+                                                    <span class="btn btn-xs btn-success text-center hidden" style="display: block; padding-left: 7px; padding-right: 7px;" id="showSigned">
+                                                        Signed
+                                                    </span>
+                                                }
+                                                else
+                                                {
+                                                    <span class="btn btn-xs btn-success text-center" style="display: block; padding-left: 7px; padding-right: 7px;">
+                                                        Signed
+                                                    </span>
+                                                }
+                                            </td>
+                                            <td>
+                                                <a class="label label-primary text-center" target="_blank" href="~/Report/TCLBillRequisiontReport?companyId=@item.CompanyFK&billRequisitionMasterId=@item.RequisitionId">
+                                                    <i class="fa fa-print"></i> Print
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+@Scripts.Render("~/bundles/jqueryui")
+@Styles.Render("~/Content/cssjqryUi")
+
+@section scripts {
+
+    <script type="text/javascript">
+
+        $('.datepicker').datepicker({
+            dateFormat: "dd/mm/yy",
+            showOn: 'both',
+            buttonText: "<i class='fa fa-calendar'></i>",
+            changeMonth: true,
+            changeYear: true,
+            yearRange: "2001:+50"
+        });
+
+        $(document).ready(function () {
+            "use strict"
+
+            $('.formValidator').bootstrapValidator();
+
+        });
+
+        function ChequeSign(chequeRegisterId) {
+            $("#hideSigned").removeClass("d-block").addClass("hidden");
+            $("#showSigned").removeClass("hidden").addClass("d-block");
+            console.log(chequeRegisterId);
+        }
+    </script>
+}
+
