cheque and cheque list report create

--- a/KGERP/Views/ChequeRegister/Index.cshtml
+++ b/KGERP/Views/ChequeRegister/Index.cshtml
@@ -132,7 +132,7 @@
                                                 }
                                             </td>
                                             <td>
-                                                <a class="label label-primary text-center" target="_blank" href="~/Report/TCLBillRequisiontReport?companyId=@item.CompanyFK&billRequisitionMasterId=@item.RequisitionId">
+                                                <a class="label label-primary text-center" target="_blank" href="~/Report/ChequeRegisterPrinting?chequeRegisterId=@item.ChequeRegisterId">
                                                     <i class="fa fa-print"></i> Print
                                                 </a>
                                             </td>
