--- a/KGERP/Views/ChequeRegister/ChequeRegisterReport.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeRegisterReport.cshtml
@@ -14,20 +14,20 @@
     @*@Html.HiddenFor(model => model.CompanyId, new { @id = "hfCompanyId" })*@
     <div class="row">
 
-        <div class="col-md-3">
+        @*<div class="col-md-3">
             @Html.Label("Cheque Date", htmlAttributes: new { @class = "control-label" })
             <br />
             <div style="display:flex">
-                @Html.EditorFor(model => model.StrFromDate, new { htmlAttributes = new { @class = "datepicker form-control", @autocomplete = "off", @style = "width: 100%;" } })
+                @Html.EditorFor(model => model.ChequeDate, new { htmlAttributes = new { @class = "datepicker form-control", @autocomplete = "off", @style = "width: 100%;" } })
             </div>
-            @Html.ValidationMessageFor(model => model.StrFromDate, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.ChequeDate, "", new { @class = "text-danger" })
 
-        </div>
+        </div>*@
         <div class="col-md-3">
             @Html.Label("Project", htmlAttributes: new { @class = "control-label" })
             <br />
             <div style="display:flex">
-                @Html.EditorFor(model => model.ProjectId, new { htmlAttributes = new { @class = "datepicker form-control", @autocomplete = "off", @style = "width: 100%;" } })
+                @Html.DropDownListFor(model => model.ProjectId, new SelectList(Model.ProjectList, "Value", "Text"), "---Select Project---", new { htmlAttributes = new { @class = "datepicker form-control searchingDropdown", @autocomplete = "off", @style = "width: 100%;" } })
             </div>
             @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
 
@@ -36,7 +36,7 @@
         <div class="col-md-3">
             <div class="form-group">
                 <label for="message-text" class="col-form-label">Requisition No:</label>
-                @Html.DropDownListFor(model => model.RequisitionId, new SelectList(Model.RequisitionList, "Value", "Text"), "---Select Warehouse---", new { @class = "dropdownsize form-control searchingDropdown" })
+                @Html.DropDownListFor(model => model.RequisitionId, new SelectList(Model.RequisitionList, "Value", "Text"), "---Select Requisition---", new { @class = "dropdownsize form-control searchingDropdown" })
                 @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,12 +44,7 @@
         <div class="col-md-3">
 
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-9">
-           
-        </div>
+   
 
         <div class="col-md-3" style="margin-top:24px;float:left;display:flex">
             <select class="pull-right" style="color:#ffffff; background-color:#dd4b39;height:34px;font-size:15px;width:50%" name="ReportType" id="ReportType">
