--- a/KGERP/Views/ChequeRegister/ChequeRegisterReport.cshtml
+++ b/KGERP/Views/ChequeRegister/ChequeRegisterReport.cshtml
@@ -1,5 +1,11 @@
 ﻿@model KGERP.Service.ServiceModel.ChequeRegisterModel
 @using KGERP.Utility;
+
+@{
+    ViewData["Title"] = "Cheque Register Report";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <div class="row">
     <div class="col-md-12" style="background-color:lightblue">
         @Html.Label("Cheque Register List", new { @style = "font-size:20px" })
@@ -9,51 +15,33 @@
 
 @using (Html.BeginForm("ChequeRegisterReport", "Report", FormMethod.Post, new { @id = "idForm" }))
 {
-
     @Html.AntiForgeryToken()
-    @*@Html.HiddenFor(model => model.CompanyId, new { @id = "hfCompanyId" })*@
+
     <div class="row">
-
-        @*<div class="col-md-3">
-            @Html.Label("Cheque Date", htmlAttributes: new { @class = "control-label" })
-            <br />
-            <div style="display:flex">
-                @Html.EditorFor(model => model.ChequeDate, new { htmlAttributes = new { @class = "datepicker form-control", @autocomplete = "off", @style = "width: 100%;" } })
+        <div class="col-md-4">
+            <div class="form-group">
+                <label class="form-label">Select Project:</label>
+                @Html.DropDownListFor(model => model.ProjectId, new SelectList(Model.ProjectList, "Value", "Text"), "==Select Requisition==", new { @class = "form-control searchingDropdown" })
+                @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
             </div>
-            @Html.ValidationMessageFor(model => model.ChequeDate, "", new { @class = "text-danger" })
-
-        </div>*@
-        <div class="col-md-3">
-            @Html.Label("Project", htmlAttributes: new { @class = "control-label" })
-            <br />
-            <div style="display:flex">
-                @Html.DropDownListFor(model => model.ProjectId, new SelectList(Model.ProjectList, "Value", "Text"), "---Select Project---", new { htmlAttributes = new { @class = "datepicker form-control searchingDropdown", @autocomplete = "off", @style = "width: 100%;" } })
-            </div>
-            @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
-
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-4">
             <div class="form-group">
-                <label for="message-text" class="col-form-label">Requisition No:</label>
-                @Html.DropDownListFor(model => model.RequisitionId, new SelectList(Model.RequisitionList, "Value", "Text"), "---Select Requisition---", new { @class = "dropdownsize form-control searchingDropdown" })
+                <label class="form-label">Requisition No:</label>
+                @Html.DropDownListFor(model => model.RequisitionId, new SelectList(Model.RequisitionList, "Value", "Text"), "==Select Requisition==", new { @class = "form-control searchingDropdown" })
                 @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="col-md-3">
-
-        </div>
-   
-
-        <div class="col-md-3" style="margin-top:24px;float:left;display:flex">
-            <select class="pull-right" style="color:#ffffff; background-color:#dd4b39;height:34px;font-size:15px;width:50%" name="ReportType" id="ReportType">
+        <div class="col-md-4" style="margin-top:24px;float:left;display:flex">
+            <select class="pull-right form-control" style="color:black; background-color:lightgray;height:34px;font-size:15px;width:50%" name="ReportType" id="ReportType">
                 <option value="PDF">PDF</option>
                 <option value="EXCEL">EXCEL</option>
                 <option value="WORD">WORD</option>
             </select>
             &nbsp;
-            <input type="submit" name="EXPORT" value="EXPORT" class="btn btn-success pull-right" formtarget="_blank" />
+            <input type="submit" name="EXPORT" value="EXPORT" class="btn btn-primary pull-right" formtarget="_blank" />
         </div>
     </div>
 
