--- a/KGERP/Views/Configuration/AccountingCostCenter.cshtml
+++ b/KGERP/Views/Configuration/AccountingCostCenter.cshtml
@@ -1,17 +1,36 @@
-﻿@{
-    ViewData["Title"] = "Project Entry";
+﻿@model KGERP.Service.Implementation.Configuration.VMUserMenu
+@{
+    ViewData["Title"] = "New Project";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model KGERP.Service.Implementation.Configuration.VMUserMenu
+
+<style>
+    input, select, textarea {
+        max-width: 100%;
+    }
+
+    .ui-datepicker-trigger {
+        width: 35px !important;
+        height: 33px !important;
+        margin-left: 5px !important;
+    }
+
+    .dateCustom {
+        width: 82% !important;
+        border-radius: 1px !important;
+        border: 1px solid #d2d6de !important;
+        height: 33px !important;
+    }
+</style>
 
 <section class="content-header">
     <h1>
-        Project Entry
+        New Project
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
 
-        <li class="active">Project Entry</li>
+        <li class="active">New Project</li>
     </ol>
 </section>
 @using (Html.BeginForm("AccountingCostCenter", "Configuration", FormMethod.Post, new { id = "userMenuFormId", @class = "formValidator", onreset = "resetDDL();" }))
@@ -19,112 +38,157 @@
     <section class="content">
         <div class="row">
             <div class="col-md-12">
-                <div class="col-md-3">
-                    <div class="box">
-                        @Html.AntiForgeryToken()
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        <div class="box-danger">
-                            <div class="box-header"></div>
-                            <!-- /.box-header -->
-                            <div class="box-body">
-                                @Html.HiddenFor(model => model.ID, new { id = "userMenuId" })
-                                @Html.HiddenFor(model => model.ActionId, new { id = "ActionId" })
-                                @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
+                <div class="box">
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="box-danger">
+                        <div class="box-header"></div>
+                        <div class="box-body">
+                            @Html.HiddenFor(model => model.ID, new { id = "userMenuId" })
+                            @Html.HiddenFor(model => model.ActionId, new { id = "ActionId" })
+                            @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
 
+                            <div class="col-md-4">
                                 <div class="form-group">
-                                    <label asp-for="ProjectId">Select Project Type : </label>
-                                    @Html.DropDownListFor(model => model.accounting_CostCenterTypeId, new SelectList(Model.accounting_CostCenterTypes.OrderBy(order => order.Name), "CostCenterTypeId", "Name"), "== Select Project Type ==", new { id = "selectProjectType", @class = "form-control", })
+                                    <label class="form-label">Project Type<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.DropDownListFor(model => model.accounting_CostCenterTypeId, new SelectList(Model.accounting_CostCenterTypes.OrderBy(order => order.Name), "CostCenterTypeId", "Name"), "==Select Project Type==", new { id = "ddlProjectType", @class = "form-control searchingDropdown", @style = "width: 100%", @required = "true" })
                                     @Html.ValidationMessageFor(model => model.accounting_CostCenterTypeId, "", new { @class = "text-danger" })
                                 </div>
+                            </div>
 
+                            <div class="col-md-4">
                                 <div class="form-group">
-                                    <label asp-for="ProjectId">Project Name : </label>
-                                    @Html.TextBoxFor(model => model.Name, new { id = "txtMenuName", @class = "form-control input-sm", @placeholder = "Project Name" })
-                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                                </div>
-
-                                <div class="form-group">
-                                    <label asp-for="ProjectId">Short Name : </label>
-                                    @Html.TextBoxFor(model => model.ShortName, new { id = "txtShortName", @class = "form-control input-sm", @placeholder = "Short Name" })
+                                    <label class="form-label">Short Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.TextBoxFor(model => model.ShortName, new { id = "txtShortName", @class = "form-control", @placeholder = "Short Name", @style = "width: 100%", @required = "true" })
                                     @Html.ValidationMessageFor(model => model.ShortName, "", new { @class = "text-danger" })
                                     <small class="text-danger" id="errorMessage"></small>
                                 </div>
+                            </div>
 
+                            <div class="col-md-4">
                                 <div class="form-group">
-                                    <div class="col-md-4">
-                                        <button type="button" onclick="resetForm()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
-                                    </div>
-                                    <div class="col-md-8">
-                                        <button type="submit" id="btnSave" class="btn btn-primary btn-block"><i class='fa fa-edit'></i> Add</button>
-                                    </div>
+                                    <label class="form-label">Project Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.TextBoxFor(model => model.Name, new { id = "txtMenuName", @class = "form-control", @placeholder = "Project Name", @style = "width: 100%", @required = "true" })
+                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                            <div class="box-footer">
+
+                            <div class="col-md-3">
+                                <div class="form-group">
+                                    <label class="form-label">Start Date<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    <input name="StartDate" asp-for="StartDate" type="datetime" value="@DateTime.Now.ToString("dd/MM/yyyy")" required="required" class="datepicker w-100 dateCustom" placeholder="From Date" autocomplete="off" id="txtStartDate">
+                                    @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="col-md-3">
+                                <div class="form-group">
+                                    <label class="form-label">End Date<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    <input name="EndDate" asp-for="EndDate" type="datetime" value="@DateTime.Now.ToString("dd/MM/yyyy")" required="required" class="datepicker w-100 dateCustom" placeholder="From Date" autocomplete="off" id="txtEndtDate">
+                                    @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="col-md-3">
+                                <div class="form-group">
+                                    <label class="form-label">Total Amount<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.TextBoxFor(model => model.TotalAmount, new { id = "txtAmount", @class = "form-control", @placeholder = "Amount", @style = "width: 100%", @required = "true" })
+                                    @Html.ValidationMessageFor(model => model.TotalAmount, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="col-md-3">
+                                <div class="form-group">
+                                    <label class="form-label">Currency<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.TextBoxFor(model => model.Currency, new { id = "txtCurrency", @class = "form-control", @placeholder = "Amount", @style = "width: 100%", @required = "true" })
+                                    @Html.ValidationMessageFor(model => model.TotalAmount, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="form-label">Location<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                    @Html.TextAreaFor(model => model.Remarks, new { id = "txtLocation", @class = "form-control", @placeholder = "Type project location here", @style = "width: 100%", @required = "true" })
+                                    @Html.ValidationMessageFor(model => model.TotalAmount, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="col-md-6">
+                                    <button type="button" onclick="resetForm()" class="btn btn-secondary btn-block" data-dismiss="modal" style="margin-top: 35px;">Reset</button>
+                                </div>
+                                <div class="col-md-6">
+                                    <button type="submit" id="btnSave" class="btn btn-primary btn-block" style="margin-top: 35px;"><i class='fa fa-edit'></i> Add</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-9">
-                    <div class="box">
-                        <div class="box-danger">
-                            <div class="box-header"></div>
-                            <!-- /.box-header -->
-                            <div class="box-body">
+            </div>
+            <div class="col-md-12">
+                <div class="box">
+                    <div class="box-danger">
+                        <div class="box-header"></div>
+                        <!-- /.box-header -->
+                        <div class="box-body">
 
-                                <div class="table-responsive col-md-12">
-                                    <table id="KgErpDataTable" class="table table-striped">
-                                        <thead>
-                                            <tr>
-                                                <th>SL</th>
-                                                <th>Project Name</th>
-                                                <th>Short Name</th>
-                                                <th>Project Type</th>
-                                                <th>Action</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            @{
-                                                if (Model.DataList != null)
+                            <div class="table-responsive col-md-12">
+                                <table id="KgErpDataTable" class="table table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>SL</th>
+                                            <th>Type</th>
+                                            <th>Name</th>
+                                            <th>Amount</th>
+                                            <th>Currency</th>
+                                            <th>Date</th>
+                                            <th>Location</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody class="text-secondary">
+                                        @{
+                                            if (Model.DataList != null)
+                                            {
+                                                int sl = 0;
+                                                foreach (var item in Model.DataList.OrderBy(order => order.CostCenterTypeName))
                                                 {
-                                                    int sl = 0;
-                                                    foreach (var item in Model.DataList.OrderBy(order => order.Name))
-                                                    {
-                                                        <tr>
-                                                            <td>
-                                                                @(++sl)
-                                                                <input type="hidden" id="hidCompanyFK_@item.ID" value="@item.CompanyFK" />
-                                                                <input type="hidden" id="costCenterTypeId_@item.ID" name="accounting_CostCenterTypeId" value="@item.accounting_CostCenterTypeId" />
-                                                            </td>
+                                                    <tr>
+                                                        <td>
+                                                            @(++sl)
+                                                            <input type="hidden" id="hidCompanyFK_@item.ID" value="@item.CompanyFK" />
+                                                            <input type="hidden" id="costCenterTypeId_@item.ID" name="accounting_CostCenterTypeId" value="@item.accounting_CostCenterTypeId" />
+                                                        </td>
 
-                                                            <td id="tdProjectName_@item.ID">
-                                                                @item.Name
-                                                            </td>
+                                                        <td id="tdprojectType_@item.ID">
+                                                            @item.CostCenterTypeName
+                                                        </td>
 
-                                                            <td id="tdShortName_@item.ID">
-                                                                @item.ShortName
-                                                            </td>
+                                                        <td id="tdProjectName_@item.ID">
+                                                            [@item.ShortName] - @item.Name
+                                                        </td>
 
-                                                            <td id="tdprojectType_@item.ID">
-                                                                @item.CostCenterTypeName
-                                                            </td>
+                                                        <td>100</td>
+                                                        <td>BDT</td>
+                                                        <td>12-02-2024 - 21-04-2024</td>
+                                                        <td>Jessore, Bangladesh</td>
 
-                                                            <td>
-                                                                <a id="@item.ID" onclick=" makeEditble(this);" class="linkPointer" data-toggle="modal" data-target="#exampleModal" title="Edit" data-placement="top"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                                                                <a id="@item.ID" onclick="makeDeletable(@item.ID);" class="linkPointer" data-toggle="modal" data-target="#itemActionModal" title="Delete"
-                                                                   data-placement="top">
-                                                                    <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
-                                                                </a>
-                                                            </td>
-                                                        </tr>
-                                                    }
+                                                        <td>
+                                                            <a id="@item.ID" onclick=" makeEditble(this);" class="linkPointer" data-toggle="modal" data-target="#exampleModal" title="Edit" data-placement="top"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                                                            <a id="@item.ID" onclick="makeDeletable(@item.ID);" class="linkPointer" data-toggle="modal" data-target="#itemActionModal" title="Delete"
+                                                               data-placement="top">
+                                                                <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
+                                                            </a>
+                                                        </td>
+                                                    </tr>
                                                 }
                                             }
-                                        </tbody>
-                                    </table>
-                                </div>
+                                        }
+                                    </tbody>
+                                </table>
                             </div>
-                            <div class="box-footer">
-                            </div>
+                        </div>
+                        <div class="box-footer">
                         </div>
                     </div>
                 </div>
@@ -156,12 +220,25 @@
     </div>
 }
 
+@Scripts.Render("~/bundles/jqueryui")
+@Styles.Render("~/Content/cssjqryUi")
 
 @section scripts {
     <script type="text/javascript">
 
         $(document).ready(function () {
+            "use strict"
+
             $('.formValidator').bootstrapValidator();
+
+            $('.datepicker').datepicker({
+                dateFormat: "dd/mm/yy",
+                showOn: 'both',
+                buttonText: "<i class='fa fa-calendar'></i>",
+                changeMonth: true,
+                changeYear: true,
+                yearRange: "2001:+50"
+            });
         });
 
         function makeEditble(elem) {
